# pulse2percept

./: .codecov.yml  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SingleElectrode.py  Untitled.ipynb  Untitled6.ipynb  azure-pipelines.yml  build-wheels.sh  conftest.py  electrode_type.ipynb  plot_ElectrodeArray.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  colab-pins.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: verify_runtime_deps.py
.github/workflows/: build.yml  build_slow.yml  build_wheels.yml  ci-push.yml  codeql.yml  codespell.yml  colab-drift.yml  colab-install.yml  dependency-review.yml  diagram.yml  main.yml  scorecards.yml  wheels.yml
data/: kid-pool.avi
data/Horsager_2011/: DataSummary_Horsager2011.csv  DataSummary_Horsager2011.xlsx  S05_A1_A2.mat  S05_C1_D1.mat  S05_C3_C2.mat  S06_A1_A2.mat  S06_A1_A4.mat  S06_A1_C1.mat  S06_A2_C2.mat  S06_A4_B4.mat  S06_B2_B4.mat  S06_B3_B1.mat  S06_B3_B2.mat  S06_C1_B1.mat  S06_C2_B2.mat  S06_C3_B2.mat  S06_C4_C1.mat  Thumbs.db
datasets/: __init__.py  _beyeler2019.py  base.py  setup.py
datasets/tests/: test_base.py
doc/: Makefile  api.rst  background.rst  conf.py  first_steps.rst  getting_started.rst  index.rst  install.rst  installation.rst  make.bat  requirements.txt
doc/_ext/: custom_references_resolver.py  p2pdocs.py
doc/developers/: contributing.rst  debug.rst  extending.rst  index.rst  releases.rst  style_guide.rst  tests.rst
doc/tools/: apigen.py  buildmodref.py
doc/topics/: cortical.rst  datasets.rst  implants.rst  models.rst  stimuli.rst
doc/users/: api.rst  faq.rst  implants.rst  index.rst  models.rst  news.rst  references.rst  release_notes.rst  stimuli.rst
examples/: README.rst  plot_test.py
examples/cortex/: README.rst  plot_overview.py
examples/datasets/: README.rst  plot_data_beyeler2019.py  plot_data_horsager2009.py  plot_data_nanduri2012.py  plot_fornos2012.py  plot_greenwald2009.py  plot_horsager2009.py  plot_perezfornos2012.py
examples/developers/: README.rst  plot_tests.py
examples/implants/: README.rst  plot_CustomCircleElectrodeArray.py  plot_argus.py  plot_custom_electrode_array.py  plot_custom_electrode_array.py.orig  plot_electrode_grid.py  plot_implants.py  plot_implants_cortical.py
examples/models/: README.rst  plot_axon_map.py  plot_axonmap.py  plot_beyeler2019_axonmap.py  plot_beyeler2019_scoreboard.py  plot_dynaphos.py  plot_granley2021_biphasic.py  plot_horsager2009.py  plot_nanduri2012.py  plot_neuropythy.py  plot_retinotopy.py  plot_scoreboard.py  plot_thompson2003.py  plot_visual_field_maps.py
examples/notebooks/: 0.0-example-epiretinal.ipynb  0.0-example-usage.ipynb  0.0-mb-profiling-temporal-model.ipynb  0.1-image2percept.ipynb  0.1-mb-profiling-pulse2percept.ipynb  0.2-image2stim-old.ipynb  0.2-video2percept.ipynb  0.2-video2stim-old.ipynb  0.2-video2stim.ipynb  0.3-add-your-own-model.ipynb  1.0-exp-nanduri2012.ipynb  ArgusI.ipynb  Psycho2PulseTrain.ipynb  compare-nanduri-naive-cython.ipynb  cython-fastconv.ipynb  finite-difference.ipynb  internal-0.0-parfor.ipynb  internal-0.2-axon-map.ipynb  internal-0.2-grow-axons.ipynb  internal-0.3-finite-difference.ipynb  letters2percepts.ipynb  parfor.ipynb
examples/processing/: plot_shrink.py
examples/stimuli/: README.rst  plot_image_stim.py  plot_psychophysics.py  plot_pulse_trains.py  plot_pulses.py  plot_retarget.py  plot_sinusoidal.py  plot_video_stim.py
ffmpeg/: README.txt
ffmpeg/doc/: ffmpeg-all.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffplay-all.html  ffprobe-all.html  general.html
matlab/: AhujaModel.m  AlanModel.m  AnotherVersionOfModel.m  Gamma.m  ModelKrishnan.m  ModelNanduri.m  Model_CAOnElectrode.m  fitKrishnan2Nanduri.m  getSquarePulse.m  plotNanduriVsKrishnan.m  setupModel.m
pulse2percept/: __init__.py  api.py  effectivecurrent2brightness.py  electrode2currentmap.py  fast_retina.pyx  files.py  implants.py  oyster.py  retina.py  retina.pyx  setup.py  stimuli.py  utils.py  version.py  viz.py
pulse2percept/datasets/: LICENSE  __init__.py  base.py  beyeler2019.py  fornos2012.py  greenwald2009.py  han2021.py  horsager2009.py  nanduri2012.py  perezfornos2012.py
pulse2percept/implants/: __init__.py  alpha.py  argus.py  base.py  bva.py  bvt.py  electrode_arrays.py  electrodes.py  ensemble.py  imie.py  prima.py
pulse2percept/io/: __init__.py  image.py  video.py
pulse2percept/model_selection/: __init__.py  base.py  optimizers.py
pulse2percept/models/: __init__.py  _axon_map.pyx  _beyeler2019.pyx  _granley2021.pyx  _horsager2009.cpp  _horsager2009.pyx  _nanduri2012.cpp  _nanduri2012.pyx  _scoreboard.pyx  _temporal.pyx  _thompson2003.pyx  axon_length_timing.ipynb  axon_map.py  base.py  beyeler2019.py  biphasicspatial_ver_pytorch.py  granley2021.py  horsager2009.py  jax.ipynb  jax_testing.ipynb  nanduri2012.py  scoreboard.py  setup.py  temporal.py  thompson2003.py  watson.py  (+1 more)
python/: effectivecurrent2brightness.py  electrode2currentmap.py  main.py  npy2savedformats.py  oyster.py  stuff.py  testSparseConv.py  test_effectivecurrent2brightness.py  test_electrode2currentmap.py  test_utils.py  utils.py
scripts/: CalculateChronaxies.py  ConvertImage2Percept.py  Find_INL_NFL_weighting.py  SingleElectrode.py  video2percept-boston.py  video2percept-pool.py
torch/: HNA_torch.py  usage.py
(+166 files in other folders)
