[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "Cython>=3.0.8",
  'oldest-supported-numpy==2023.12.21; python_version < "3.12"',
  'numpy>=2.0; python_version >= "3.12"',
]
build-backend = "setuptools.build_meta"

[project]
name = "pulse2percept"
version = "0.10.0dev"
description = "A Python-based simulation framework for bionic vision"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Michael Beyeler", email = "mbeyeler@ucsb.edu" },
    { name = "Jacob Granley", email = "jgranley@ucsb.edu" },
    { name = "Apurv Varshney", email = "apurv@ucsb.edu" },
    { name = "Ariel Rokem", email = "arokem@gmail.com" }
]
keywords = ["bionic vision", "simulation", "scientific computing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21,<3",
    "scipy>=1.0.1",
    "scikit-image>=0.14",
    "matplotlib>=3.0.2",
    "imageio-ffmpeg>=0.4",
    "pandas",
    "joblib>=0.11",
    "setuptools>=65"
]

[project.optional-dependencies]
dev = [
    "h5py",
    "pytest>=5",
    "pytest-cov",
    "flake8",
    "seaborn",
    "neuropythy"
]
# (Optional) convenience extra for docs/Colab how-tos
colab = [
    "numpy>=2,<3"
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"pulse2percept.stimuli" = ["data/*"]
"pulse2percept.datasets" = ["data/*"]
"pulse2percept.viz" = ["data/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse2percept", "pulse2percept.*"]
exclude = ["wheelhouse", "tests", "*/tests"]
